--- a/livres.html
+++ b/livres.html
@@ -7016,35 +7016,35 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/LObstin%C3%A9-Rapha%C3%ABl-Nedilko/dp/B0DH82YY8C?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=202NAQJ1511XR&dib=eyJ2IjoiMSJ9.AmF-5R-1Ot2APzXoIaG-MhbrlIIjF7Wlhz5WGMd5vVWR7lP2hzkH7CDRGPlmeVh0C5vciuRjOH4CLBw54KakONbdpJ70n0Uy7NzFOqg5yiJZnpHWAPQHM7T7SZLwvkcYFsJ4UufBrIi4fkMCWlrO1OMXu6xNcPBeAXTrOIgOJIuaDC65lqA-P2ew3I8NNb-N8zzkV9NPjW4YFIKBaviTHpHRZ3uXrbRcN4ew1UfUKyWRrv26sKFY601DbivSQRN-tw8VvyJ1_bSnf225vjL5BJLGxg8ak5Bv7g4mntMf1Ek.iE4m7YQFGZ0CI52CN4Lm3Bp03-cVTmACwwmgJOREX4Y&dib_tag=se&keywords=l%27obstin%C3%A9&qid=1745497712&sprefix=l%27obstin%C3%A9%2Caps%2C103&sr=8-2" target="_blank"> <img
+          src="https://c.media-amazon.com/images/I/31vKLzHBgeL.jpg" alt="L'Obstiné" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Raphäel Nedilko
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        L'Obstiné
       </figcaption>
       <figcaption>
-        23,56€
+        8,40€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Entrailles-nuit-Marco-Pianelli/dp/2266350846?crid=3BKDBFAJM7YX&dib=eyJ2IjoiMSJ9.pSZOYNLNq6gusHxaXRi9-g.UaJ9tz8pbc5fn-sDMpfMaca8CYdVfr5OLqnfmvB4olI&dib_tag=se&keywords=les+entrailles+de+la+nuit+marco+pianelli&qid=1745497747&sprefix=les+entrail%2Caps%2C87&sr=8-1" target="_blank"> <img
+          src="https://c.media-amazon.com/images/I/619KE65OidL._SL1311_.jpg" alt="Les Entrailles de la nuit" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Marco Pianelli
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        Les Entrailles de la nuit
       </figcaption>
       <figcaption>
-        35,00€
+        8,70€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
