--- a/religion.html
+++ b/religion.html
@@ -488,20 +488,20 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2--->
     <figure>
-      <a href="https://www.amazon.fr/Soyons-saints-M%C3%A9thode-pour-g%C3%A2cher/dp/2365263887/?_encoding=UTF8&pd_rd_w=ovzX6&content-id=amzn1.sym.46807d81-91bd-498b-9732-d523d8e7a752%3Aamzn1.symc.fc11ad14-99c1-406b-aa77-051d0ba1aade&pf_rd_p=46807d81-91bd-498b-9732-d523d8e7a752&pf_rd_r=511QDGP7642HTSBYMZSA&pd_rd_wg=3B4VT&pd_rd_r=44ccd234-43f8-46ec-a2c9-85220f3c6718&ref_=pd_hp_d_atf_ci_mcx_mr_ca_hp_atf_d"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/7146HcULdBL._SL1500_.jpg" alt="Soyons saints" class="books" /></a>
+      <a href="https://www.amazon.fr/Lespoir-vous-d%C3%A9%C3%A7oit-jamais-Fran%C3%A7ois/dp/2749960681?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1EKHXXYKC8Z1&dib=eyJ2IjoiMSJ9.SakJvk36MY7C8ogqemffFQ.MMrGZemCPo5zHFtDKgeT9LyXqoZ33GLMNc3lvXxy_0o&dib_tag=se&keywords=l%27espoir+ne+vous+d%C3%A9%C3%A7oit+jamais&qid=1745496959&sprefix=l%27espoir+ne+vous+d%C3%A9%C3%A7oit+jamais%2Caps%2C62&sr=8-1"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/61q1TGaqFrL._SL1178_.jpg" alt="L'espoir ne vous déçoit jamais" class="books" /></a>
       <figcaption>
-        Le catho de service
+        Pape François
       </figcaption>
       <figcaption>
-        Soyons saints
+        L'espoir ne vous déçoit jamais
       </figcaption>
       <figcaption>
-        18,00€
+        16,95€
       </figcaption>
-    </figure>--->
+    </figure>
 
     <!--Jeu 3--->
     <figure>
@@ -766,50 +766,50 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2--->
     <figure>
-      <a href="https://www.amazon.fr/gp/product/2204081256?ie=UTF8&tag=babelio-21&linkCode=as2&camp=1642&creative=6746&creativeASIN=2204081256"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/41ncuVlukFL.jpg" alt="Dieu est amour" class="books" /></a>
+      <a href="https://www.amazon.fr/force-pri%C3%A8re-Pape-francois/dp/2848768231?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2HQRBIHAJDOWP&dib=eyJ2IjoiMSJ9.GS6j3eTQNLRRhbFOCTsKPib1sL9Eh8DCQxZom1SbrowrVuPj4TOeZArUgiFWOXJajR2paHjN69MUbi1mNXOj2NtBMrYT460zQ8aOn3hy47WT_lEtgNe4b9llEf6X-KNjD-fyACuJzuG9e3wU86RyTVy5bhoESJp-pxfNcyd_AZS05kVZPngNRSv5BroFNMPywj0hHCja-35ewen3UScy7Shpjpq6EPN0TEO_XMdEByHRzIBfUgwssem3rrD2KNqGnpDjGQ1wLQ5l8OMTLJXtiSLy6t_aO6IAGkhpHmJtj1w.YyWRBy5NWWzGzvLu1D9IOdJXouAJ_PN8Rbp0eWLqjSs&dib_tag=se&keywords=la+force+de+la+pri%C3%A8re&qid=1745496935&sprefix=la+force+de+la+pri%C3%A8r%2Caps%2C87&sr=8-2"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/61c+tAd64eL._SL1213_.jpg" alt="La force de la prière" class="books" /></a>
       <figcaption>
-        Benoît XVI
+        Pape François
       </figcaption>
       <figcaption>
-        Dieu est amour
+        La force de la prière
       </figcaption>
       <figcaption>
-        4,40€
+        15,00€
       </figcaption>
-    </figure>--->
+    </figure>
 
-    <!--Jeu 3
+    <!--Jeu 3--->
     <figure>
-      <a href="https://www.amazon.fr/gp/product/2204086312?ie=UTF8&tag=babelio-21&linkCode=as2&camp=1642&creative=6746&creativeASIN=2204086312"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/61p1t9BSS6L._SL1000_.jpg" alt="Sauvés dans l'espérance" class="books" /></a>
+      <a href="https://www.amazon.fr/foi-d%C3%A9montr%C3%A9e-Irenee-Lyon/dp/2204138576?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2EQ7CWTQFOD2C&dib=eyJ2IjoiMSJ9.UYIshChc7TYtHujb35_4TtbzNgMThOccjMejl1YAE84.HHfImLqUAYNdZuFSo22E6pY7NO-BzJoEwtSTw4cgLFo&dib_tag=se&keywords=la+foi+d%C3%A9montr%C3%A9%C3%A9&qid=1745496876&sprefix=la+foi+d%C3%A9montr%C3%A9%C3%A9%2Caps%2C99&sr=8-1"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/71n21pUOD9L._SL1273_.jpg" alt="La foi démontrée" class="books" /></a>
       <figcaption>
-        Benoît XVI
+        Irénée de Lyon
       </figcaption>
       <figcaption>
-        Sauvés dans l'espérance
+        La foi démontrée
       </figcaption>
       <figcaption>
-        4,00€
+        7,00€
       </figcaption>
-    </figure>--->
+    </figure>
 
-    <!--Jeu 4
+    <!--Jeu 4--->
     <figure>
-      <a href="https://www.amazon.fr/LAMOUR-DANS-VERITE-COLLECTIF/dp/2204087335/257-0312289-7580746?pd_rd_w=5dHjV&content-id=amzn1.sym.6d74588d-d473-4523-ade2-87afcdbad55e&pf_rd_p=6d74588d-d473-4523-ade2-87afcdbad55e&pf_rd_r=9PM6DVEZYTTQZ7RZJYAS&pd_rd_wg=RxpJM&pd_rd_r=a7412c66-08e9-4348-958e-b05eadde6e7f&pd_rd_i=2204087335&psc=1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/41+Oa9TuRAL.jpg" alt="L'amour dans la vérité" class="books" /></a>
+      <a href="https://www.amazon.fr/gloire-Dieu-cest-lhomme-vivant/dp/2204084786?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3A1T7USLO70LR&dib=eyJ2IjoiMSJ9.uVI_XM6EiymP5NoEkYg0I_FvCx88ey7CCCk8TlYQjnaCbo8uW4RyY1FecyZ3wYJKVo2YfnWS0rSZ7oX_18u2Oam01dSBWBOerHoitrZOTYxiFuE8a7x4VaOPza8pWBH1li_zCkDNYk4edHjpxOXvket8l3QHIgbfgzrSUfdcpCCOnNIzEAHOhcrAyTmDT2Wau6vSPrbzD_IZShAznTwO_DrJcttfUjgr3gnZg3IO0CKLA7XpB_QtYmJpFstidhoqpOzqZ6Z0AJYymagjSwEQr-5BCryj3ozwoyNIZ2eyylU.e6E7eCakBxBZ6iKs2i1OqnTx7RZhdiFsEC2PSHkHkRE&dib_tag=se&keywords=la+gloire+de+dieu&qid=1745496865&sprefix=la+gloire+de+dieu%2Caps%2C84&sr=8-1"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/61cSdf++SOL._SL1273_.jpg" alt="La Gloire de Dieu, c'est l'homme vivant" class="books" /></a>
       <figcaption>
-        Benoît XVI
+        Irénée de Lyon
       </figcaption>
       <figcaption>
-        L'amour dans la vérité
+        La Gloire de Dieu, c'est l'homme vivant
       </figcaption>
       <figcaption>
-        5,00€
+        6,00€
       </figcaption>
-    </figure>--->
+    </figure>
   </div>
 
   <div class="gamesLine">
@@ -828,82 +828,82 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/P%C3%A8res-Apostoliques-Texte-int%C3%A9gral/dp/2204068721?crid=3PR4AC9W9JEMR&dib=eyJ2IjoiMSJ9.Aj3FWKI_tBS8s_HxCz9vRVDIqCcxaPblZHbHyUC4V53WdW7Z5bGeRO6ztyypyykicnXwmw91b_-XgzB8KzLxq-hZ72lGDWD99Fv1pRfsRYhbY5E3dbbdrTYAZGHbSqAla4sMzy9iF4S_2Ps8_mLD6Tmxv9owO4qwhb_3aAh6HT3L4hPhqs7JpzapIpaiD4OdaDLUsFeO-i8aVSL7UdGWa-DkWlzCH-5H1bpcnQWudT8L7GRyAxwDs6pvsAYadCbWB2uK3N81ORoDNwQ3obdI1cOZPcg8O8obpG_pTqmrTWU.pnXjcs8Jd5Dkpwa3nM4m5M-jSA_X4j4TWPGWQD-ZYhc&dib_tag=se&keywords=les+peres+apostoliques&qid=1745496847&sprefix=les+peres+apost%2Caps%2C108&sr=8-1"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/71YkzXNqcmL._SL1500_.jpg" alt="Les Pères Apostoliques : Texte intégral" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Collectif
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Les Pères Apostoliques : Texte intégral
       </figcaption>
       <figcaption>
-        2,70€
+        24,00€
       </figcaption>
-    </figure>--->
+    </figure>
 
-    <!--Jeu 3
+    <!--Jeu 3--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/ch%C3%A2teau-l%C3%A2me-Livre-demeures/dp/2757842021?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3P47OWSHWURGE&dib=eyJ2IjoiMSJ9.SkCOsg-ebF-Hg3vxw6JHVO4AT1d2xRRatgbEvEKnHgRzmdTcI5JEeT9ywVGJsJXC7I_aK0nyLWwCW7V-Kf_3jTMnc0Mry_hu7cyH7rcNz4HydDQk5gt5R3w2msV0w8cwRX1kk4hY4cLJKQKEiyV_IThIZ17P8_R6BeluwtzRgQ-cCpm3MxK4WUaftAraaJO_qtB4DT3Kvb5OOv788kb3d-ExDQy5MrXa_UjrhjDVgLfKaUvwnAFw3XTKEOWcPxG6xGvrwOEHSmwgkW4CbNDVMYdRWmR0QgsWxLmBq1Pyvqg.64_xqaibxIXkBg8r2-pBLShm202qSFaqTlSEjOAcdYs&dib_tag=se&keywords=le+chateau+de+l%27ame&qid=1745496735&sprefix=le+chateau+de+l%27ame%2Caps%2C86&sr=8-1"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/71v3OH0epyL._SL1319_.jpg" alt="Le Château de l'âme" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Thérèse d'Avila
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Le Château de l'âme
       </figcaption>
       <figcaption>
-        2,70€
+        9,30€
       </figcaption>
-    </figure>--->
+    </figure>
 
-    <!--Jeu 4
+    <!--Jeu 4-->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/Lumi%C3%A8re-Foi-Encyclique-souverain-Fran%C3%A7ois/dp/2706710845?crid=28G3KW20ENF9H&dib=eyJ2IjoiMSJ9.FQ0eorVqZGG6bpQEYSGzIimVsNJSRU92J9Qk6S3qCnqDNWutnWnj4EppSOlCUF9WO4mnJwe0jM7WX1G94s8ybUii6giaCJfDr-zk7SZRVby_8Y9CXK5jtZGKw8ucGAlDVGr0zyob9RIWIHeMRJJftCtWrp_Di_c0y3Pmqz7HC8wUlHQ3Ara5bN9G9fQREFYK8beSsxD4Yy6JGBxWo0pbu83BZwaJxnYFbkBS4rJy1FCxpMQFZW9VKaxLvGmrAnBz-Gd7nOyOL1rcaBXpapLz2xOWVddcgHsOO7GCFTyth2g.FFJHcn6eEUP30Sz6fOLclbDDngB4NOW_AJnPkvb97wA&dib_tag=se&keywords=lumen+fidei&qid=1745496701&sprefix=lumen+f%2Caps%2C84&sr=8-2"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/41yY6+pNYvL.jpg" alt="La Lumière de la Foi" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Pape François
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Lumen Fidei
       </figcaption>
       <figcaption>
-        2,70€
+        8,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="gamesLine">
-    <!--Jeu 1
+    <!--Jeu 1--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/Lou%C3%A9-sois-tu-Laudato-Pape-Fran%C3%A7ois/dp/2204102873?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2UNNCO6LDALL9&dib=eyJ2IjoiMSJ9.vz1416JR8_PCoj43snzX87dAc9g0UVRFdoi7adQgkaUVADPMvQZGEV0Lp0cKNtEDzAAncCRsUd4zDebo2NzHsdv4fKBwkXDZTCpvfkGWZSTBax2jqfedAf8u8l2iQZywh42X1DwdC4EeRrLdZ_0c7oIOxysltDt6YYjxWaHRkiM9r9An9Umztaa1DEVsyc3JCVotYGiVbGV14jBkGdNvHDoDky1rTXohwpGPFT11dd1s_AjK_q3EiWzBwYYAp6d2AlAdSv432Ty2kaVqJiZI63YVj-hFhVrxEAuB-TOlxY4.fmqoy9ncuNZZ5_mT0-xLNmHaAV95x5XfmUMcj12BU2Y&dib_tag=se&keywords=laudato+si&qid=1745496653&sprefix=laudato+si%2Caps%2C90&sr=8-1"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/61FBZ7C7gQL._SL1267_.jpg" alt="Laudato si" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Pape François
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Laudato si
       </figcaption>
       <figcaption>
-        2,70€
+        4,50€
       </figcaption>
-    </figure>--->
+    </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/Dieu-existe-t-Robert-Sarah/dp/2213731896?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3ZJSKO9BQU4P&dib=eyJ2IjoiMSJ9.OTJxSSbXQWAV3XRuxxPCoL_XzK7Js4jNmoK1oi9mB2Q.LbJPx41YoidmkyGDAuDivWRNXSRRxGIg7M9xqvnPtQs&dib_tag=se&keywords=robert+sarah+dieu+existe&qid=1745496498&sprefix=robert+sarah+dieu+existe%2Caps%2C64&sr=8-1"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/71KyjBpHG9L._SL1500_.jpg" alt="Dieu existe-t-il ?" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Cardinal Robert Sarah
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Dieu existe-t-il ?
       </figcaption>
       <figcaption>
-        2,70€
+        24,90€
       </figcaption>
-    </figure>--->
+    </figure>
 
     <!--Jeu 3
     <figure>
