--- a/religion.html
+++ b/religion.html
@@ -905,35 +905,35 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 3
+    <!--Jeu 3--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/secrets-du-Vatican-Bernard-LECOMTE/dp/2262035040/257-0312289-7580746?pd_rd_w=icU21&content-id=amzn1.sym.6d74588d-d473-4523-ade2-87afcdbad55e&pf_rd_p=6d74588d-d473-4523-ade2-87afcdbad55e&pf_rd_r=JTMVDN13WYXB1VGGDFHT&pd_rd_wg=KA4N1&pd_rd_r=eb489d80-e002-4dd8-be34-14c19fbbbd58&pd_rd_i=2262035040&psc=1"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/61by4PMyAEL._SL1306_.jpg" alt="Les secrets du Vatican" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Bernard Lecomte
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Les secrets du Vatican
       </figcaption>
       <figcaption>
-        2,70€
+        10,00€
       </figcaption>
-    </figure>--->
+    </figure>
 
-    <!--Jeu 4
+    <!--Jeu 4-->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/derniers-secrets-du-Vatican/dp/2262044058?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3V5I4F18GX0DF&dib=eyJ2IjoiMSJ9.i86lbezQ6Lt1UUKB3B7mloornmslVgvZAbIozGNYDLfj0Yio9gC5aYI7Yzv8P6qySMi6e3PXQOpgispJKccv-piXDMNUoVzsjytIAZN15Ls6Lyiss8O2_DMow3HQ9alJNG9NPJEu5oOQJiabgdvHEA.GGIObw32tVBtMCrfYPui9Hxd5K9lteVtlP3SF6jdQj0&dib_tag=se&keywords=derniers+secrets+du+vatican&qid=1745945354&sprefix=derneirs+secrets+du+vatican%2Caps%2C76&sr=8-1"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/61z5scvoGNL._SL1311_.jpg" alt="Les derniers secrets du Vatican" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Bernard Lecomte
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Les derniers secrets du Vatican
       </figcaption>
       <figcaption>
-        2,70€
+        9,50€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="gamesLine">
