--- a/autres.html
+++ b/autres.html
@@ -21,29 +21,32 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1
+    <!--Autres 1-->
     <figure>
-      <a href="https://shop.gotaga.tv/products/gourde" target="_blank"> <img
-          src="https://shop.gotaga.tv/cdn/shop/files/gourde1.png?v=1695407346&width=800" alt="Gourde Gotaga" class="others" /></a>
+      <a href="#" target="_blank"> <img
+          src="https://www.facebook.com/sportnutritionbrussels/" alt="Carte cadeau sport nutrition" class="others" /></a>
       <figcaption>
-        Gourde Gotaga
+        Carte Cadeau Sport Nutrition
       </figcaption>
       <figcaption>
-        25,00€
+        Achat sur web ou en magasin
       </figcaption>
-    </figure>-->
+      <figcaption>
+        à Rive Gauche
+      </figcaption>
+    </figure>
 
-    <!--Autres 2
+    <!--Autres 2-->
     <figure>
-      <a href="https://shop.gotaga.tv/accessoires/60-tumbler-list.html" target="_blank"> <img
-          src="https://shop.gotaga.tv/763-large_default/tumbler-list.jpg" alt="Tumblr Gotaga" class="others" /></a>
+      <a href="https://www.amazon.fr/SPORTS-Standard-PS5-Vid%C3%A9o-Fran%C3%A7ais/dp/B0F24Y88V1?pd_rd_w=TCcBd&content-id=amzn1.sym.cbacdd79-a2a7-4dad-8c44-4a36464a6b2a%3Aamzn1.symc.ca948091-a64d-450e-86d7-c161ca33337b&pf_rd_p=cbacdd79-a2a7-4dad-8c44-4a36464a6b2a&pf_rd_r=BRHCTZRNC3QYSTF9KBNR&pd_rd_wg=0oaDq&pd_rd_r=6c8c7c4f-622f-4df0-9d3e-b327f906e710&pd_rd_i=B0F24Y88V1&th=1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/81Ck5Ckkh+L._AC_SL1500_.jpg" alt="Tumblr Gotaga" class="others" /></a>
       <figcaption>
-        Tumblr Gotaga
+        F1 25
       </figcaption>
       <figcaption>
-        20,00€
+        62,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Autres 3
     <figure>
