--- a/livres.html
+++ b/livres.html
@@ -7048,127 +7048,139 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Bad-Therapy-Kids-Arent-Growing/dp/0593542924?_encoding=UTF8&dib_tag=se&dib=eyJ2IjoiMSJ9.fbZq8Q9mKtnfpRS5PyKKUYofnFMHi0mv1yP_td-uDhDGzPVMvwX5kjDrO_PRHeYg523PxjPEauUzngwDg8KrlieYYd4XSsmxPgdQ09DX46wl6pO5L9oqlOQ2DCxZ48CbAMn90nuT06PsGUL3v2Q2eKB7fslpkr7BaGJDbJpuVxK9h0iBW8XAb8PnSx3JcmhGkYjaiyjIRd1UXdJ8fVUcUg.1CWxcvGE6_7OiJMoPjDRkch76KaB7u2t3-5gEZDB_aI&qid=1747823430&sr=8-2"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/81LihqT2kYL._SL1500_.jpg" alt="Bad Therapy: Why the Kids Aren't Growing Up" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Abigail Shrier
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Bad Therapy
       </figcaption>
       <figcaption>
-        17,90€
+         Why the Kids Aren'
       </figcaption>
-    </figure>-->
+      <figcaption>
+         Growing Up
+      </figcaption>
+      <figcaption>
+        22,72€
+      </figcaption>
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Power-48-lois-du-pouvoir/dp/2848992549?crid=3W4KCQLBA2WE9&dib=eyJ2IjoiMSJ9._ExBACjpm5K52OZjsF-RbyP0BmYYNh66s-wfwwwgss-Qd6lQqAr_IXqSpf6oAnEKmeJEklYdGSp34vwbc8wBIiTChM2wNn0_9mZJ31o1MAeCYtlb_crIZYrlfRw-ooQalxdFtj8Xizu92caP4y8_7aizh3uPtroLAJXhrpGs6B50jb0_iZ7WTPlNhzc8RDgydqgmR_Usl6wzcPdID_W990pwmpvgRL3IKaGLmQUhi25Ava_rmQJoICDXuH8lTqVtQY9z57jFCtYcW28atdGKGPo-igG_1PdypFXS0BzvVqs.QwmnaVlx9ucFnoffFw2hQeCUev7pILXQ8-dTLpOByoA&dib_tag=se&keywords=48+lois+du+pouvoir&qid=1748284779&sprefix=48+loi%2Caps%2C87&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61wOju-qXiL._SL1500_.jpg" alt="Power: Les 48 lois du pouvoir" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Robert Greene
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Power: Les 48 lois du pouvoir
+      </figcaption>
+      <figcaption>
+        27,90€
+      </figcaption>
+    </figure>
+
+    <!--Livre 99-->
+    <figure>
+      <a href="https://www.amazon.fr/lois-nature-humaine-Robert-Greene/dp/2379350280/257-0312289-7580746?pd_rd_w=TlYJ2&content-id=amzn1.sym.6d74588d-d473-4523-ade2-87afcdbad55e&pf_rd_p=6d74588d-d473-4523-ade2-87afcdbad55e&pf_rd_r=33ERSXXTN2M6VYK1HH5T&pd_rd_wg=vyseJ&pd_rd_r=80b99716-c217-452f-a9ae-d033f600bf95&pd_rd_i=2379350280&psc=1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71mRCfDLC-L._SL1500_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <figcaption>
+        Robert Greene
+      </figcaption>
+      <figcaption>
+        Les lois de la nature humaine
+      </figcaption>
+      <figcaption>
+        27,00€
+      </figcaption>
+    </figure>
+
+    <!--Livre 100-->
+    <figure>
+      <a href="https://www.amazon.fr/Caf%C3%A9-au-revoir-Toshikazu-Kawaguchi/dp/222648597X?crid=3I93CDHE1QA1X&dib=eyJ2IjoiMSJ9.hoYzWcHht2Hws3CxgM661cpg1wiT-kiCLGYdh5xMl_zI1OleQjv9Kg_fVZH9X8cSeektjGAIQRHvGbSQoyinnVRk4mjZAeyTad71r3LdzJQ41soaDMO6XzNpnJpcNOrQhx4KZ1aVVm0EU38CYGirBIRdNsVDxxTMwyVLjX36aZivEaYsoM4kOCtOrrShXTdtT4zrhwPdHYhcO9xb1dvTR5J3Cj8lD_nsje-vFW9yFC1vRhQlxa6LOfveaYyRh4LcKryQ4hO9g-aJg69YOUz34yrI_k7FmLqHdpaQKOjh9h4.RwzY6RfAM4qzRQMQHRwZubcoDA9WDpm-CU-hNJWhino&dib_tag=se&keywords=le+caf%C3%A9+des+au+revoir&qid=1749890912&sprefix=le+caf%C3%A9+des+%2Caps%2C98&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/81fAJd8wkWL._SL1500_.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <figcaption>
+        Toshikazu Kawaguchi
+      </figcaption>
+      <figcaption>
+        Le Café des au revoir
       </figcaption>
       <figcaption>
         19,90€
       </figcaption>
-    </figure>-->
-
-    <!--Livre 99
-    <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
-      <figcaption>
-        Renee Paquette
-      </figcaption>
-      <figcaption>
-        Messy In The Kitchen
-      </figcaption>
-      <figcaption>
-        23,56€
-      </figcaption>
-    </figure>-->
-
-    <!--Livre 100
-    <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
-      <figcaption>
-        Jean-Phillipe Lustyk
-      </figcaption>
-      <figcaption>
-        Le grand livre de la boxe
-      </figcaption>
-      <figcaption>
-        35,00€
-      </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/plus-grandes-affaires-lHeure-crime/dp/2386710017?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=CZVL76B9QFKC&dib=eyJ2IjoiMSJ9.36IUu0myxnSIEcSibsmg_OVE9YXlRC_PXt6jiyYCeGJMJ6zsj09ddopqTVmy5MP5q3ttUQwQe_tm7v1sP668uCYOpWCOUFmkc95IEfs8adyVJa-95grmO5cAr4oKJAzJl0fQOjWpAxvOKmo7GGJvK6GzDSIdzLisHNu_L5f4USE-b5OUZxea1XP12zLj5rOkkYqW50nbmu950OANr50slnGjFhpQBeXbS438SJ8zNrYysLOfT8VabubctgPAp4mpUiiZ3CEmhZR_cLgBwlKYmVTkDOUowG3OHtSGbIlDiEg.ZI0w-AyaZ_asr_l57ncZ3BN9yaEwaPdwCUFYaDw0yO4&dib_tag=se&keywords=l%27heure+du+crime&qid=1749890826&sprefix=l%27heure+du+crime%2Caps%2C94&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71HWP5caFML._SL1500_.jpg" alt="Derrière la porte verte" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Jean-Alphonse Richard
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Les plus grandes affaires
       </figcaption>
       <figcaption>
-        17,90€
+        de l’Heure du crime
       </figcaption>
-    </figure>-->
+      <figcaption>
+        20,90€
+      </figcaption>
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/L%C3%A9gume-vert-Philippe-Vigand/dp/2253162337?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZUUTWSJ1VFK&dib=eyJ2IjoiMSJ9.rnsmjO0rDu4e3khSyTIAP4glwttYrwjcxzH8cCXfmE5NtJ0CNcCbF0_jo5kDAV2HijZpek3CYIu0aFw9KTHnG2GPjBhAf1FjjhhI7t1wKy8dbi1FVNL6_Mu5GEG3ZyF1uyvTIdishGphnod8c_RbOINRX15OMWizL4VfzzOWlGxhyHJh3u0LPDScqylTgbScN_e7cnVcGx8Jf1Z3QEmIsqFSJ53cYzY1s1aSEViYGDWDyjxtAvHoxl95j0--lRc1Hu_AuidIiZL13tZr7lkBUo5fawXdQ3eE7-bg9LlgAoA.ZkG-mx5DukCffzhjSf64aptoIKHdJl1BKf5gaDD9GPc&dib_tag=se&keywords=legume+vert&qid=1749890838&sprefix=legume+vert%2Caps%2C84&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71IWaRpcftL._SL1500_.jpg" alt="... Mais la vie continue" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Philippe Vigand
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Légume vert
       </figcaption>
       <figcaption>
-        19,90€
+        6,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/veuf-noir-Grand-Canyon/dp/2264085681?crid=UEHIECNKGSKU&dib=eyJ2IjoiMSJ9.biPyM77nWm6SnA2x604C-A.wBfidqMS2yW2cXOFTArinwLuPtT4AqeqXqpxcppQG6U&dib_tag=se&keywords=le+boeuf+noir+du+grand+canyon&qid=1749890539&sprefix=le+veuf+noir%2Caps%2C99&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71IbRzaNbDL._SL1311_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Vincent Manilève
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Le veuf noir du Grand Canyon
       </figcaption>
       <figcaption>
-        23,56€
+        8,30€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Letters-J-D-Rockefeller-his-son/dp/B09BY8189Q?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2KC3RC2SZ542G&dib=eyJ2IjoiMSJ9.uCj-R_4cVQ_zCjfL8wivuJ3A4B2UNyLEnx59BDsUKqSmBwIEgOPahOQBC6U4y5rC05MSsQIxMK9fge8w6Sq9F4k8JwfBtMCRjA-l2kT0-kGzPgiYTerFxSeyfS3oqkHvHkylwgUDURDtjrQI04pwRsDmSTPB9GepbnAwgJ4zowtTSJLZIQ-vsrR-jLzxQmwOifwIir8HqeavSRcHT-xHSqDqpMYL3JUvXVTFmMoix9PWYqzYO_Ww91OQymab1ZpyLBc-0oG7sDb8W7clt9cocQ1qysDldkRXZGc4ri2v-QQ.eBpeTFgP5gGM1j8niZ_7KEcWwW8P_imq2Tvfk41Yjc4&dib_tag=se&keywords=38+letters&qid=1749890558&sprefix=38+letters%2Caps%2C97&sr=8-2" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61aKbyBIZFL._SL1500_.jpg" alt="Le grand livre de la boxe" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        G. Ng
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        The 38 Letters from J.D.
       </figcaption>
       <figcaption>
-        35,00€
+        Rockefeller to his son
       </figcaption>
-    </figure>-->
+      <figcaption>
+        17,58€
+      </figcaption>
+    </figure>
   </div>
 
   <div class="booksLine">
