--- a/religion.html
+++ b/religion.html
@@ -937,35 +937,35 @@
   </div>
 
   <div class="gamesLine">
-    <!--Jeu 1
+    <!--Jeu 1--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/veramente-itinerario-attraverso-pagine-Vangelo/dp/8892247654?crid=2Z0SGDPAGTGCQ&dib=eyJ2IjoiMSJ9.kRyIxsWJJ5QkQ8KhYMfM6odbAANHexjKr0DtD34QTg7HccD2il2Dd9I8rtP0j5afn0BaY0YzmIhpuo5sY4I8FkJzkQm23jDcCmEalcBMo8n7W8GVeproqNV0JkSqcNN1lqV9zdPs4BCR8n5iSeijfjGq3GQA29n_gammKhkLEZAm9fSWPNaUPMZ7Wt9PhC1TocdDUA5AoJ77va2lqfUFQR8Qi594I45CgrsmRWqLLA9b_ueDaOlE0Di25ONxxMY0MD_u2s2NmQDryBQKEVsXNES4VKwjnhHHDNe5-li7pMc.c0rL_DbrvWoiRHXDQHgGWsWfMpTqIl5c-0zWVqjgOTs&dib_tag=se&keywords=luigi+maria+epicoco&qid=1749890711&sprefix=luigi+maria+%2Caps%2C84&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/81RF-HmuIrL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Luigi-Maria Epicoco
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Gesù veramente
       </figcaption>
       <figcaption>
-        2,70€
+        16,00€
       </figcaption>
-    </figure>--->
+    </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/concile-Vatican-II-int%C3%A9gral-1962-1965/dp/2360400770?crid=5LJD4KCE440I&dib=eyJ2IjoiMSJ9.MRi8a4_mNbuqPahXPdkdLtl9nGtJlRB_pJsv3EceSljOMrerWVGPcaRvnpuMX1_Abqf0S7Op9qJ2mPVjW4etOdaD5upLjAP8Pxt2ozhi2vvIy-JudpgY_LIoH45nXcPXYWNHfxYsfTRbhw-3HNqOXA0twZkLTowIRhr2cKfhj0bPZJ4v5rjlc4zOh9SnkFyXIlt4G8_zm_yptXpdeWm4FzpOo5mkP6Cv_6PT05JEoKscVbBbOQHEOjVISFkRvRi4iMg6dYvi6qPt0chBYyH-GRb8FSIBtKJcH--3VkN78UU.Amp3xHPEg_zodMZJkHI13LE61BL__08xh21q6hzdZAM&dib_tag=se&keywords=le+concile+vatican+ii&qid=1749890570&sprefix=le+concile+vati%2Caps%2C97&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/713F99vUdmL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Le concile Vatican II
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Texte intégral
       </figcaption>
       <figcaption>
-        2,70€
+        14,90€
       </figcaption>
-    </figure>--->
+    </figure>
 
     <!--Jeu 3
     <figure>
