--- a/autres.html
+++ b/autres.html
@@ -24,7 +24,7 @@
     <!--Autres 1-->
     <figure>
       <a href="#" target="_blank"> <img
-          src="https://www.facebook.com/sportnutritionbrussels/" alt="Carte cadeau sport nutrition" class="others" /></a>
+          src="https://sport-nutrition.be/web/image/website/1/logo/Sport%20Nutrition?unique=44fef8f" alt="Carte cadeau sport nutrition" class="others" /></a>
       <figcaption>
         Carte Cadeau Sport Nutrition
       </figcaption>
