--- a/autres.html
+++ b/autres.html
@@ -48,17 +48,20 @@
       </figcaption>
     </figure>
 
-    <!--Autres 3
+    <!--Autres 3-->
     <figure>
-      <a href="https://www.amazon.fr/PlayStation-officielle-DualSense-rechargeable-Compatible/dp/B08H99BPJN/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1VKMYHEBJCR9E&keywords=manette+ps5&qid=1686572285&sprefix=man%2Cette+ps5%2Caps%2C76&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/51+ojGZU0FL._AC_SL1500_.jpg" alt="Gotaga" class="others" /></a>
+      <a href="https://www.decathlon.be/fr/p/mp/thor-athletics/sangles-de-levage-sangle-de-tirage-musculation-grip-supplementaire-camel/_/R-p-a3e93c99-2cb4-47a3-bb26-181453d1f759?mc=a3e93c99-2cb4-47a3-bb26-181453d1f759_c1c4&c=noir_blanc"
+        target="_blank"> <img src="https://contents.mediadecathlon.com/m16316325/k$1fa7c58195bd6af8b743bceb3f315831/sq/sangles-de-levage-sangle-de-tirage-musculation-grip-supplementaire-noir.jpg?format=auto&f=1200x1200" alt="Gotaga" class="others" /></a>
       <figcaption>
-        Manette PS5
+        Sangles de levage
       </figcaption>
       <figcaption>
-        64,90€
+        Couleur Noir et Blanc Ultra (3eme choix)
       </figcaption>
-    </figure>-->
+      <figcaption>
+        17,95€
+      </figcaption>
+    </figure>
 
     <!--Autres 4
     <figure>
