--- a/religion.html
+++ b/religion.html
@@ -967,20 +967,23 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 3
+    <!--Jeu 3--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.moliere.com/fr/ratzinger-joseph-les-encycliques-de-jean-paul-ii-9782740310779.html"
+        target="_blank"> <img src="https://www.moliere.com/media/catalog/product/cache/9b0cee8b4526635199786af269f1229e/9/7/9782740310779_20.webp" alt="Mea Culpa" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Joseph Ratzinger
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Les Encycliques de Jean-Paul II
       </figcaption>
       <figcaption>
-        2,70€
+        A commander chez Molière
       </figcaption>
-    </figure>--->
+      <figcaption>
+        27,00€
+      </figcaption>
+    </figure>
 
     <!--Jeu 4
     <figure>
