--- a/autres.html
+++ b/autres.html
@@ -63,38 +63,25 @@
       </figcaption>
     </figure>
 
-    <!--Autres 4
+    <!--Autres 4-->
     <figure>
-      <a href="https://fnatic.com/products/fnatic-mouse-bungee"
-        target="_blank"> <img src="https://cf-img.fnatic.com/cdn-cgi/image/dpr=1,fit=contain,format=auto,height=1500,width=1536/https://cdn.sanity.io/images/5gii1snx/production/c17585e3cd231092750ec398cf0983fbe04679b5-2000x1500.png" alt="Bungee" class="others" /></a>
+      <a href="#"
+        target="_blank"> <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcTtTa8mcQFDN902oovsXkRLuL3mWpYPQ1HK9eAx0hvgyvs-ZG3m-oRV51lU8fWQpG0Mq6NKhTrLMkZ4-2YBOF7AODrG4UqtVfZZ8SkluVOc422etKbK7tPH" alt="Bungee" class="others" /></a>
       <figcaption>
-        Bungee Fnatic
+        One Million by Paco Rabanne
       </figcaption>
-      <figcaption>
-        19,99€
-      </figcaption>
-    </figcaption>
-    <figcaption>
-      Payement par Paypal
-    </figcaption>
-    <figcaption>
-      Voir article précédent
-    </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="othersLine">
-    <!--Autres 1
+    <!--Autres 1-->
     <figure>
-      <a href="https://www.amazon.fr/BALIBETOV-Conteneur-Yerba-Mate-Yerbero/dp/B08TGYFN69/ref=d_bmx_dp_g8f6etoo_sccl_3_2/257-0666022-3977509?pd_rd_w=5qW0k&content-id=amzn1.sym.451ebedf-757d-4f53-9e19-67aee92e9c6d&pf_rd_p=451ebedf-757d-4f53-9e19-67aee92e9c6d&pf_rd_r=96TT8QANM7B59KCW43FH&pd_rd_wg=T2mFt&pd_rd_r=9a08d725-fa62-4881-a74a-5928b569180b&pd_rd_i=B08TGYFN69&psc=1" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/61Pwyyqx46L._AC_SL1390_.jpg" alt="Récipient à Mate" class="others" /></a>
+      <a href="#" target="_blank"> <img
+          src="https://static.beautytocare.com/media/catalog/product/p/a/paco-rabanne-invictus-eau-de-toilette-200ml_1.jpg" alt="Récipient à Mate" class="others" /></a>
       <figcaption>
-        Récipient à Mate
+        Invictus by Paco Rabanne
       </figcaption>
-      <figcaption>
-        20,49€
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Autres 2
     <figure>
